# Comfyui-Performance

./: .gitignore  LICENSE  README.md  README_EN.md  __init__.py  api.py  metrics.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
locales/en/: main.json  settings.json
locales/zh/: main.json  settings.json
web/: i18n.js  performance_monitor.css  performance_monitor.js
